--- a/.github/ci-cypress.yml
+++ b/.github/ci-cypress.yml
@@ -1,7 +1,10 @@
 name: Cypress Tests
+
 on:
+  push:
   pull_request:
   workflow_dispatch:
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -21,7 +24,7 @@ jobs:
         with:
           # Starts web server for E2E tests - replace with your own server invocation
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          start: npm start
+          start: npm ci && npm start
           wait-on: 'http://localhost:4200' # Waits for above
           # Records to Cypress Dashboard
           # https://docs.cypress.io/guides/dashboard/projects#Set-up-a-project-to-record
