--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -27,6 +27,8 @@ jobs:
           cache-dependency-path: |
               package-lock.json
               functions/package-lock.json
+      - name: Create emulator data directory
+        run: mkdir -p functions/emulator/
       - name: Cypress run
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v4
